# libdd-rc

./: .gitattributes  .gitignore  .licenserc.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE-3rdparty.csv  NOTICE  README.md  buf.yaml  cbindgen.toml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  dependabot.yml.disabled
.github/actions/setup-rust/: action.yml
.github/images/: rust-ci.Dockerfile
.github/workflows/: buf.yml  cbindgen-verify-header.yml  cbindgen.yml  ci-image.yml  fuzz.yml  go.yml  licence.yml  miri.yml  publish.yml  rust.yml  verify-header.yml  zizmor.yml
dd-fuzz/: Dockerfile  README.md  build.sh
docs/: ci.md  licenses.md
include/: libdd_rc.h  libdd_rc_test_harness.h
lib/: README.md
lib/rc-crypto/: Cargo.toml  README.md
lib/rc-crypto/benches/: README.md  benches.rs
lib/rc-crypto/benches/runs/: key_gen.rs  mod.rs  sign.rs
lib/rc-crypto/src/: cached_string_repr.rs  hex.rs  issuer.rs  lib.rs  signature.rs  signer.rs  valuable_assert.rs
lib/rc-crypto/src/certificate/: certificate.rs  csr.rs  fingerprint.rs  mod.rs  serial_number.rs  validity.rs
lib/rc-crypto/src/certificate/id/: cert_id.rs  dangerous_comparible.rs  issuer_cert_id.rs  mod.rs
lib/rc-crypto/src/keys/: key_id.rs  mod.rs  private.rs  public.rs
lib/rc-crypto/tests/: signature.rs
lib/rc-x509-client/: Cargo.toml  README.md  build.rs
lib/rc-x509-client/fuzz/: Cargo.toml
lib/rc-x509-client/fuzz/fuzz_targets/: ffi_io.rs
lib/rc-x509-client/src/: abort_on_drop.rs  dispatch.rs  entrypoint.rs  lib.rs  shutdown_signal.rs  test_harness.rs
lib/rc-x509-client/src/codec/: client_to_server.rs  mod.rs  server_to_client.rs
lib/rc-x509-client/src/connection/: io_handle.rs  lifecycle_events.rs  mod.rs  reconnection.rs
lib/rc-x509-client/src/host_runtime/: api.rs  connection.rs  correlation_id.rs  mod.rs
lib/rc-x509-client/src/host_runtime/ffi/: README.md  connection.rs  ctx.rs  mod.rs
lib/rc-x509-client/src/payload/: mod.rs  topic.rs
lib/rc-x509-client/src/trust/: mod.rs  untrusted_cert.rs
lib/rc-x509-ffi/: Cargo.toml  README.md  build.rs
lib/rc-x509-ffi/fuzz/: Cargo.toml  README.md  build.rs
lib/rc-x509-ffi/fuzz/fuzz_targets/: dispatch.rs  ffi_io.rs  test_harness.rs
lib/rc-x509-ffi/src/: connection.rs  ctx.rs  io_handle.rs  lib.rs  test_harness.rs
lib/rc-x509-proto/: Cargo.toml  README.md  build.rs
lib/rc-x509-proto/protos/: protocol.proto
lib/rc-x509-proto/protos/magic_tunnel/: README.md  protocol.proto
lib/rc-x509-proto/protos/magic_tunnel/remote_config/: remote_config.proto
lib/rc-x509-proto/src/: lib.rs
lib/rc-x509-roots/: Cargo.toml  README.md  r1.crt  r2.crt
lib/rc-x509-roots/src/: lib.rs  r1.rs  r2.rs  root.rs
lib/rc-x509-test-harness/: Cargo.toml  build.rs
lib/rc-x509-test-harness-ffi/: Cargo.toml  build.rs
lib/rc-x509-test-harness-ffi/src/: lib.rs
lib/rc-x509-test-harness-go/: Cargo.toml  build.rs
lib/rc-x509-test-harness-go/src/: lib.rs
lib/rc-x509-test-harness/src/: lib.rs
lib/rc-x509-test-helpers/: Cargo.toml
lib/rc-x509-test-helpers/src/: lib.rs  valuable_assert.rs
lib/rc-x509-trust/: Cargo.toml  README.md
lib/rc-x509-trust/src/: lib.rs
lib/rc-x509-trust/src/cert/: mod.rs  root.rs  untrusted.rs
lib/rc-x509-trust/src/chain/: build_unverified.rs  mod.rs  unverified.rs
lib/rc-x509-trust/src/test_issuer/: arbitrary_chain.rs  ca.rs  identity.rs  mod.rs
lib/rc-x509-trust/src/test_issuer/cert_builder/: builder.rs  mod.rs
lib/rc-x509-trust/src/test_issuer/cert_builder/template/: intermediate.rs  leaf.rs  mod.rs  root.rs
lib/rc-x509-trust/src/trust_store/: cache.rs  mod.rs  traits.rs
placeholder/: Cargo.toml
placeholder/src/: lib.rs
scripts/: check-1stparty-crate-licenses.sh  check-3rdparty-licenses.sh  generate-3rdparty-licenses.sh  release.sh  setup-git-merge-drivers.sh  update-rust-version.sh
wrapper/go/: README.md  callback.h  client.go  client_test.go  client_test_build.go  go.mod
wrapper/go/internal/testproto/: doc.go  generate.sh  protocol.pb.go
