# Copyright 2026 Datadog, Inc
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
resolver = "3"
package.edition = "2024"
package.license = "Apache-2.0"

members = [
	"lib/rc-crypto",
	"lib/rc-x509-client",
]

[workspace.lints.clippy]
unsafe_code = "warn"      # Contained to FFI crate with explicit allow only
clone_on_ref_ptr = "warn" # A ref +1 is not the same as a deep copy
future_not_send = "warn"  # Required for multithreaded runtimes
dbg_macro = "warn"        # Used for debugging, should not be in committed code
todo = "warn"             # Should not be in committed code - use unreachable!("reason")

field_reassign_with_default = "allow"      # Default values, plus a field override.
default_constructed_unit_structs = "allow" # Unit structs do not appear as values.

[workspace.lints.rustdoc]
private_intra_doc_links = "allow" # Code comments that link to non-pub items.

[workspace.lints.rust]
missing_docs = "warn"                  # We should document our code for humans.
unreachable_pub = "warn"               # Visibility is part of communicating with humans
missing_debug_implementations = "warn" # Frequently used bound on data structures
unused_crate_dependencies = "warn"     # Warn for unused dependencies
