# Copyright 2026-Present Datadog, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "rc-crypto"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
aws-lc-rs = { version = "1.16.2", default-features = false, features = ["alloc", "fips"] }
bytes = "1"
thiserror = "2"
valuable = { version = "0.1.1", features = ["derive"] }

# NOTE: both of these dependencies currently enable non-FIPS crypto backends.
rcgen = { version = "0.14.7", default-features = false, features = ["fips", "pem", "aws_lc_rs", "x509-parser"] }
x509-parser = { version = "0.18", features = ["verify-aws"] }
pem = "3.0.6"

[dev-dependencies]
assert_matches = "1.5.0"
criterion = "0.8"
hex = "0.4"
proptest = "1.7"

[lib]
# Disable the stdlib benchmark harness and use Criterion exclusively.
bench = false

[[bench]]
name = "benches"
harness = false
