# Copyright 2026-Present Datadog, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "rc-x509-client"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
futures = "0.3.32"
rc-x509-proto = { version = "0.1.0", path = "../rc-x509-proto" }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "parking_lot", "rt", "sync", "time"] }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
tracing = "0.1.44"

[dev-dependencies]
assert_matches = "1.5.0"
proptest = "1.10.0"
proptest-derive = "0.8.0"

[build-dependencies]
cbindgen = "0.29.0"

[features]
_test_harness = []
