[package]
name = "rc-x509-ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
futures = "0.3.32"
rc-x509-client = { version = "0.1.0", path = "../rc-x509-client" }
tokio = { version = "1.50.0", features = ["macros", "parking_lot", "rt", "sync", "time"] }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
tracing = "0.1.44"

[lints]
workspace = true

[dev-dependencies]
assert_matches = "1.5.0"
rc-x509-proto = { version = "0.1.0", path = "../rc-x509-proto" }

[build-dependencies]
cbindgen = "0.29.0"
