# Copyright 2026-Present Datadog, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "rc-x509-trust"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"

[dependencies]
bytes = "1.11.1"
hashbrown = "0.17"
rc-crypto = { version = "0.1.0", path = "../rc-crypto" }
thiserror = "2.0.18"
tracing = { version = "0.1.44", features = ["valuable"] }
valuable = "0.1.1"

[dev-dependencies]
assert_matches = "1.5.0"
proptest = "1.11.0"
rcgen = { version = "0.14", default-features = false }

[lints]
workspace = true
