[package]
name = "rc-client-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rc-x509-client = { path = "../", features = ["_test_harness"] }
rc-x509-proto = { path = "../../rc-x509-proto" }

[build-dependencies]
rc-x509-proto = { path = "../../rc-x509-proto" }
twox-hash = "2.1.2"

[[bin]]
name = "ffi_io"
path = "fuzz_targets/ffi_io.rs"
test = false
doc = false
bench = false
