# Copyright 2026-Present Datadog, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "rc-x509-ffi-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
license = "Apache-2.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
futures = "0.3.32"
libfuzzer-sys = "0.4"
rc-x509-client = { version = "0.1.0", path = "../../rc-x509-client" }
rc-x509-ffi = { version = "0.1.0", path = "../../rc-x509-ffi" }
rc-x509-proto = { version = "0.1.0", path = "../../rc-x509-proto" }
tokio = { version = "1.50.0", features = ["macros", "parking_lot", "rt", "sync", "time"] }

[build-dependencies]
rc-x509-proto = { version = "0.1.0", path = "../../rc-x509-proto" }
twox-hash = "2.1.2"

[[bin]]
name = "ffi_io"
path = "fuzz_targets/ffi_io.rs"
test = false
doc = false
bench = false
